--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -1,1 +1,40 @@
-<h1>sushi</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+    </head>
+    <body>
+        <h1>Sushi</h1>
+        <img src="../images/sushi-31493-1.jpeg" alt="sushi on a plate" width="400px"> 
+        <h4>sushi on a plate</h4>
+        <p>sushi is the <strong>best food on the planet</strong>. It is a japanese cuisine that involves raw fish wrapped in rice and seaweed wrappers with other ingredients. The possibilities are endless</p>
+        <p>popular types of fish used in sushi include tuna, eel, shrimp, and salmon. For this recipe we will be using tuna</p>
+        <br>
+        <h2>Tuna & Avocado Sushi Roll Recipe</h2>
+        <h3>You will need:</h3>
+        <ul>
+            <li>Tuna</li>
+            <li>185g can tuna in olive oil, drained well, finely flaked</li>
+            <li>2 tbsp Japanese-style mayonnaise</li>
+            <li>3 nori sheets</li>
+            <li>2 cups SunRice Koshihikari sushi rice</li>
+            <li>1/2 small ripe avocado, thinly sliced lengthways</li>
+            <li>Soy sauce, to serve</li>
+            <li>Pickled ginger, to serve</li>
+        </ul>
+        <br>
+        <h3>How to make Tuna & Avocado rolls</h3>
+        <ol>
+            <li>Make sushi rice: Place rice in a fine sieve. Rinse under cold water, stirring with your hand, until the water runs clear. Drain well. Combine rice and 3 cups cold water in a large saucepan. Cover. Bring to the boil over high heat. Reduce heat to medium-low. Gently simmer for 12 to 15 minutes or until all water is absorbed and rice is tender.</li>
+            <li>Remove from heat. Stand, covered, for 10 minutes. Transfer to a large ceramic or plastic shallow dish.</li>
+            <li>Using a spatula, stir rice to break up any lumps. Sprinkle rice with sugar and salt. Gradually add sushi seasoning, lifting and turning rice, until seasoning is well combined and the liquid is absorbed. Cool to room temperature.</li>
+            <li>Place tuna and mayonnaise in a bowl. Mix until well combined.</li>
+            <li>Place a sushi mat (see note) on a flat surface with slats running horizontally. Place 1 nori sheet, shiny-side down, on mat. Leaving a 2cm strip at edge furthest away from you, firmly press 1/3 of sushi rice evenly over nori using damp hands (see notes). Place strips of avocado along edge closest to you. Top with 1/3 of the tuna.</li>
+            <li>Lightly brush nori strip with cold water. Using sushi mat, roll up firmly to form a tight roll. Gently press to seal. Transfer to a chopping board. Using a very sharp knife and wiping knife after each cut, trim ends. Cut into 6 slices. Repeat with remaining ingredients to make 18 pieces. Serve with soy sauce and pickled ginger.</li>
+        </ol>
+        <br>
+        <h4>Recipe note</h4>
+        <p>Find sushi mats in the Asian section of supermarket. When working with cooked sushi rice, you need to work with wet hands - dip into a bowl of water with a teaspoon sushi seasoning or rice vinegar added.</p>
+    </body>
+
+</html>
