--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     </head>
     <body>
         <h1>Odin Recipies</h1>
-        <a href="recipes/sushi.html">Sushi</a>
+        <ul>
+            <li><a href="recipes/sushi.html">Sushi</a></li>
+            <li><a href="recipes/pesto.html">Pesto Pasta</a></li>
+            <li><a href="recipes/friedrice.html">Fried Rice</a></li>
+        </ul>
+        
     </body>
 </html>
