graphic design is my passion

--- a/recipes/friedrice.html
+++ b/recipes/friedrice.html
@@ -2,8 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link href="../style.css" rel="stylesheet">
     </head>
-    <body>
+    <body class="classForFriedRice">
         <h1>Fried Rice Recipe</h1>
         <img src="../images/How-To-Make-Fried-Rice-Recipe-2-1.jpeg" alt="image of fried rice" width="400px">
         <h4>fried rice is very tasty</h4>
