--- a/recipes/pesto.html
+++ b/recipes/pesto.html
@@ -1,8 +1,9 @@
 <html lang="en" >
     <head>
         <meta charset="UTF-8">
+        <link href="../style.css" rel="stylesheet">
     </head>
-    <body>
+    <body class="classForPesto">
         <h1>Pesto Pasta Recipe</h1>
         <img src="../images/Pesto-Pasta_2-1.jpeg" alt="spaghetti coverd in pesto sauce" width="400px" >
         <h4>mmmm pesto</h4>
