--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link href="../style.css" rel="stylesheet">
     </head>
-    <body>
+    <body class="classForSushi">
         <h1>Sushi</h1>
         <img src="../images/sushi-31493-1.jpeg" alt="sushi on a plate" width="400px"> 
         <h4>sushi on a plate</h4>
