--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
+        <title>Odin Recipes</title>
     </head>
     <body>
-        <h1>Odin Recipies</h1>
+        <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/sushi.html">Sushi</a></li>
+            <br>
             <li><a href="recipes/pesto.html">Pesto Pasta</a></li>
+            <br>
             <li><a href="recipes/friedrice.html">Fried Rice</a></li>
         </ul>
         
