Modify flex properties of nav buttons to recipes

--- a/index.html
+++ b/index.html
@@ -7,13 +7,20 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <ul>
+        <ul class="list">
             <li><a href="recipes/sushi.html">Sushi</a></li>
-            <br>
+            <br>               
             <li><a href="recipes/pesto.html">Pesto Pasta</a></li>
             <br>
             <li><a href="recipes/friedrice.html">Fried Rice</a></li>
         </ul>
-        
+
+        <div class="allpages">
+            <button class="sushi"><a href="recipes/sushi.html">Sushi</button>
+                <br>
+            <button class="pesto"><a href="recipes/pesto.html">Pesto Pasta</button>
+                <br>
+            <button class="friedrice"><a href="recipes/friedrice.html">Fried Rice</button>
+        </div>
     </body>
 </html>
